The text is no longer cut off

--- a/Shared/css/style.css
+++ b/Shared/css/style.css
@@ -3128,7 +3128,8 @@ span.arrow {
 }
 
 .checknarrow {
-  max-width: 140px !important;
+  width: 280px;
+  max-width: 280px !important;
   min-width: 140px !important;
 }
 
